--- a/test-scss/courses_2.html
+++ b/test-scss/courses_2.html
@@ -225,7 +225,7 @@
                             <img class="w-100 " src="./img/Group 1178.svg" alt="">
                         </div>
                     </div>
-                    <div class="right__side col-12 col-md-6 d-md-flex flex-column">
+                    <div class="right__side col-12 col-md-5 d-md-flex flex-column">
                         <span class="f-30 helvetica-75 c-black d-block mb-4">UI & UX დიზაინი</span>
                         <span class="f-16 c-light-text helvetica-55">აყევი ციფრული სამყაროს რითმს. ციფრული
                             უნდუსტრიის აკადემია უზრუნველყოფს თქვენზე
@@ -392,24 +392,10 @@
     </section>
     <seciton class="design__section overflow-hidden">
         <div class="center">
-            <div class="row d-flex align-items-center flex-column flex-lg-row align-items-stretch">
-                <div class="left__side position-relative col-12 col-lg-7">
-                    <div class=" block">
-                        <div class="blocks block_1">
-                            <img class="w-100" src="./img/design-1.svg" alt="">
-                        </div>
-                        <div class="blocks block_2">
-                            <img class="w-100" src="./img/design-2.svg" alt="">
-                        </div>
-                        <div class="blocks block_3">
-                            <img class="w-100" src="./img/design-3.svg" alt="">
-                        </div>
-                        <div class="blocks block_4">
-                            <img class="w-100" src="./img/design-4.svg" alt="">
-                        </div>
-                        <div class="blocks block_5">
-                            <img class="w-100" src="./img/design-5.svg" alt="">
-                        </div>
+            <div class="row d-flex align-items-center justify-content-md-between justify-content-center flex-column flex-lg-row">
+                <div class="left__side position-relative d-none d-md-flex col-md-8 col-lg-6">
+                    <div class="w-100 py-4 block">
+                        <img class="w-100" src="./img/Artboard-1.png" alt="">
                     </div>
                 </div>
                 <div class="right__side col-12 col-lg-5">
@@ -419,6 +405,9 @@
                         ძირითად საკითხებს, რომლის ცოდნაც აუცილებელია UI & UX დიზაინერად მუშაობისთვის. კურსის
                         განმავლობაში სტუდენტები დაეუფლებიან Adobe Experience design-სა და SketchApp-ს, რის შემდეგაც
                         ისინი დამოუკიდებლად შეძლებენ ციფრული პროდუქტების დიზაინის შექმნას.</span>
+                        <div class="block d-flex d-md-none py-3">
+                            <img class="w-100" src="./img/Artboard-1.png" alt="">
+                        </div>
                     <span class="mr-2 pl-2 helvetica-55 d-inline-block mb-3 lh-24 f-16 c-light-text">კურსი მოიცავს იმ
                         ძირითად საკითხებს, რომლის ცოდნაც აუცილებელია UI & UX დიზაინერად მუშაობისთვის. კურსის
                         განმავლობაში სტუდენტები დაეუფლებიან Adobe Experience design-სა და SketchApp-ს, რის შემდეგაც
