--- a/test-scss/index.html
+++ b/test-scss/index.html
@@ -694,13 +694,6 @@
             </div>
         </div>
     </section>
-    <!-- <div class="main-body">
-        <label class="cheks mb-0 d-flex align-items-center mt-3" for="isPoliticallyExposedPerson">
-            <span class="mr-2 firagor">i_am_politically_exposed</span>
-            <input type="checkbox" id="isPoliticallyExposedPerson" />
-            <span class="checkmark"></span>
-        </label>
-    </div> -->
 
 
 
@@ -708,6 +701,43 @@
 
 
 
+<section class="mobile sub__menu bc-banner d-flex d-md-none justify-content-center">
+    <div class="h-100 d-flex justify-content-between align-items-start w-100 sub__block px-3">
+        <div class="block pointer c-light-text d-flex flex-column align-items-center c-hover-blue transition">
+            <span class="sub__icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="22.25" height="16.672" viewBox="0 0 22.25 16.672">
+                    <path class="path" id="Path_15547" data-name="Path 15547" d="M82.063,177.524a2.054,2.054,0,0,0,1.177-2.6,1.979,1.979,0,0,0-1.179-1.24l-.123-.047v-4.716a.556.556,0,0,0-.318-.508l-9.9-4.448a.486.486,0,0,0-.4,0l-9.9,4.449a.562.562,0,0,0-.273.725.534.534,0,0,0,.274.289l3.219,1.446v7.687A1.987,1.987,0,0,0,66.58,180.6h9.894a1.984,1.984,0,0,0,1.927-2.029v-7.692l.038-.017,2.467-1.11v3.888l-.121.049a2.057,2.057,0,0,0-1.183,2.6,1.908,1.908,0,0,0,2.381,1.267ZM76.48,179.5h-9.9a.92.92,0,0,1-.9-.937v-7.219l.09.041,5.558,2.5a.486.486,0,0,0,.4,0l5.649-2.539v7.221A.918.918,0,0,1,76.48,179.5Zm-4.955-6.721-.026-.012-8.544-3.84,8.57-3.853.027.012,8.544,3.84Zm9.906,3.755h-.043a.934.934,0,0,1-.043-1.867.946.946,0,0,1,.672.242.926.926,0,0,1,.3.646v.042A.918.918,0,0,1,81.431,176.532Z" transform="translate(-61.109 -163.926)" fill="#9e9e9e"/>
+                  </svg>
+                  
+            </span>
+            <span class="f-10 helvetica-55 sub__text c-light-text transition d-flex mt-1">კურსები</span>
+        </div>
+        <div class="block pointer c-light-text d-flex flex-column align-items-center c-hover-blue transition">
+            <span class="sub__icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="19.15" height="18.959" viewBox="0 0 19.15 18.959">
+                    <path class="path" id="Path_962" data-name="Path 962" d="M144.386,168.064a3.537,3.537,0,0,0-3.523-2.909l-.4-2.252a1.768,1.768,0,0,0-2.891-1.043l-2.5,2.125a4.377,4.377,0,0,1-2.067.969l-5.239.924a3,3,0,0,0-2.432,3.472l.708,4.02a3,3,0,0,0,3.473,2.431l.759-.133.516,2.927a2.206,2.206,0,0,0,4.344-.766h0l-.517-2.923.136-.023a4.382,4.382,0,0,1,2.275.2l3.081,1.14a1.808,1.808,0,0,0,.62.113,1.774,1.774,0,0,0,1.766-1.781,1.8,1.8,0,0,0-.027-.3l-.4-2.25A3.542,3.542,0,0,0,144.386,168.064Zm-11.222,11.258a1.136,1.136,0,0,1-1.306-.914l-.517-2.928,2.209-.389.516,2.927A1.124,1.124,0,0,1,133.164,179.322Zm8-4.235a.672.672,0,0,1-.676.116h0l-3.082-1.137a5.476,5.476,0,0,0-2.838-.256l-5.239.925a1.924,1.924,0,0,1-2.216-1.552l-.709-4.02a1.915,1.915,0,0,1,1.552-2.216l5.239-.923a5.453,5.453,0,0,0,2.574-1.211l2.506-2.125a.686.686,0,0,1,.967.081.675.675,0,0,1,.152.323l.476,2.7v.023c0,.008.007.014.008.022l1.042,5.863v.023c0,.007.007.015.008.023l.476,2.7A.673.673,0,0,1,141.161,175.087Zm.717-4.165-.827-4.687a2.446,2.446,0,0,1,.826,4.688Z" transform="translate(-125.288 -161.436)" fill="#9e9e9e"/>
+                  </svg>                  
+            </span>
+            <span class="f-10 helvetica-55 sub__text c-light-text transition d-flex mt-1">შეთავაზებები</span>
+        </div>
+        <div class="block pointer c-light-text d-flex flex-column align-items-center c-hover-blue transition">
+            <span class="sub__icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18.89" height="18.022" viewBox="0 0 18.89 18.022">
+                    <path class="path" id="Path_15548" data-name="Path 15548" d="M64.143,231.675a1.181,1.181,0,0,0,.287,1.007,1.383,1.383,0,0,0,1.023.449H81.684a1.4,1.4,0,0,0,1.025-.448,1.179,1.179,0,0,0,.283-1.007l-2.083-11.1A1.346,1.346,0,0,0,79.6,219.55H77.654v-.609a3.966,3.966,0,0,0-3.953-3.832l-.13,0-.12,0a3.956,3.956,0,0,0-3.972,3.838v.6H67.511a1.313,1.313,0,0,0-1.286,1.032ZM70.57,218.94a2.935,2.935,0,0,1,3-2.826h.082a2.939,2.939,0,0,1,2.91,2.822v.615H70.57ZM67.3,220.751a.241.241,0,0,1,.236-.2h1.944v2.589l1.094,0v-2.59h5.994v2.59h1.09v-2.59H79.6a.243.243,0,0,1,.239.195l2.174,11.383H65.131Z" transform="translate(-64.123 -215.109)" fill="#9e9e9e"/>
+                  </svg>                  
+            </span>
+            <span class="f-10 helvetica-55 sub__text c-light-text transition d-flex mt-1">კალათა</span>
+        </div>
+        <div class="block pointer c-light-text d-flex flex-column align-items-center c-hover-blue transition">
+            <span class="sub__icon">
+                <svg id="noun_Blog_1087190" xmlns="http://www.w3.org/2000/svg" width="22" height="17.004" viewBox="0 0 22 17.004">
+                    <path class="path" id="Path_15678" data-name="Path 15678" d="M7.532,16A1.539,1.539,0,0,0,6,17.53V31.47A1.539,1.539,0,0,0,7.532,33h13.94A1.539,1.539,0,0,0,23,31.47V26.961l4.852-4.845a.5.5,0,0,0,0-.7l-2.266-2.266a.484.484,0,0,0-.7,0L23,21.038V17.53A1.539,1.539,0,0,0,21.472,16h-.047a.5.5,0,0,0,.047,1A.518.518,0,0,1,22,17.53v4.509L17.651,26.4a.5.5,0,0,0-.148.352V29a.5.5,0,0,0,.5.5h2.25a.5.5,0,0,0,.352-.148l1.4-1.4V31.47a.518.518,0,0,1-.531.531H7.532A.518.518,0,0,1,7,31.47V17.53A.518.518,0,0,1,7.532,17H19.5a.5.5,0,1,0,0-1Zm1.922,3.5a.5.5,0,1,0,.047,1h10a.5.5,0,1,0,0-1H9.454Zm15.784.7L26.8,21.765l-.914.914-1.563-1.563ZM23.62,21.82l1.563,1.563L20.049,28.5H18.5V26.953ZM9.454,22.5a.5.5,0,1,0,.047,1h10a.5.5,0,1,0,0-1H9.454Zm0,3a.5.5,0,1,0,.047,1h6.54a.5.5,0,1,0,0-1H9.454Zm0,3a.5.5,0,1,0,.047,1H16a.5.5,0,1,0,0-1H9.454Z" transform="translate(-6 -15.998)" fill="#9e9e9e"/>
+                  </svg>                  
+            </span>
+            <span class="f-10 helvetica-55 sub__text c-light-text transition d-flex mt-1">ბლოგი</span>
+        </div>
+    </div>
+</section>
 
 
 
