--- a/test-scss/courses_2.html
+++ b/test-scss/courses_2.html
@@ -170,7 +170,7 @@
                     ნებისმიერი
                 </span>
             </div>
-            <div class="dropdown-menu mt-2 px-2" aria-labelledby="dropdownMenuButton">
+            <div class="dropdown-menu mt-2 px-2 w-100" aria-labelledby="dropdownMenuButton">
                 <div class="blcok pt-2 pb-2 pointer hover-bc-banner">
                     <span class="mr-2 pl-2 helvetica-55 f-14 c-light-text d-flex align-items-center">
                         დიზაინი</span>
