--- a/test-scss/index.html
+++ b/test-scss/index.html
@@ -188,7 +188,7 @@
                                 განაგრძე განვითარება
                                 <img src="./img/succes.svg" alt="" class="icon">
                             </h1>
-                            <span class="c-blak helvetica-55 text-center text-md-left">დარეგისტრირდი მიიღე 50%-მდე
+                            <span class="c-blak helvetica-55 text-center f-16 lh-24 text-md-left">დარეგისტრირდი მიიღე 50%-მდე
                                 ფასდაკლება
                                 საუკეთესო ონლაინ კურსებზე</span>
                             <div class="mt-5">
