--- a/test-scss/about-us.html
+++ b/test-scss/about-us.html
@@ -141,121 +141,116 @@
             </div>
         </div>
     </header>
-    <div class="center mt-3 d-flex d-md-none">
-        <a class="btn btn-light" href="vlog.html">
-            <img src="./img/back.svg" alt="">
-            back</a>
-    </div>
-    <section class="vlog_iiner">
+    <section class="mini__header border-bottom d-none d-md-flex">
         <div class="center">
-            <h1 class="f-30 mt-4 c-black helvetica-75 col-12 col-md-9 col-lg-6 p-0 lh-35">4 გავრცელებული მითი UX
-                დიზაინის
-                შესახებ
-            </h1>
-            <span class="f-14 c-light-text d-flex mt-4 helvetica-55">22 ივლისი, 2019</span>
+            <nav style="height: 60px;" class="nav-header">
+                <ul class="d-flex align-items-center">
+                    <li class="list mr-4 d-flex align-items-center">
+                        <a style="height: 60px;" href=""
+                            class="nav__a c-light-text c-hover-blue transition helvetica-75">პაკეტები</a>
+                    </li>
+                    <li class="list mr-4 d-flex align-items-center">
+                        <a style="height: 60px;" href=""
+                            class="nav__a c-light-text c-hover-blue transition helvetica-75">ფასდაკლებები</a>
+                    </li>
+                    <li class="list mr-4 d-flex align-items-center">
+                        <a style="height: 60px;" href=""
+                            class="nav__a c-light-text c-hover-blue transition helvetica-75">კონკუსრები</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </section>
 
-            <div class="d-flex align-items-start justify-content-between mt-3">
-                <div class="main__left col-12 col-md-7 col-lg-8  px-0">
-                    <img class="w-100" src="./img/car.svg" alt="">
-                    <span class="f-16 lh-25 c-light-text d-flex mt-3 helvetica-55">მითია თუ რეალობა? ხშირად გაგჩენიათ ეს
-                        შეკითხვა?-ალბათ, კი. ადამიანები საკუთარი
-                        ინტერპრეტაციით აფასებენ კონკრეტულ ფაქტებს, შემდეგ კი ახდენენ მათ </span>
-                    <span class="f-16 lh-25 c-light-text d-flex mt-3 helvetica-55">გაეცანით, 4 გავრცელებულ მითს UX
-                        დიზაინის შესახებ:</span>
-                    <span class="f-24 lh-25 c-black d-flex mt-3 helvetica-75">მითი #1: UX = UI</span>
-                    <span class="f-16 lh-25 c-light-text d-flex mt-3 helvetica-55">ეს ყველაზე გვარცელებული მითია.
-                        ადამიანები, რომლებიც ამ სფეროში არ არიან ხშირად
-                        ფიქრობენ, რომ UI და UX დიზაინი ერთი და იგივეა. რეალურად ეს, ასე არ არის. ეს ორი
-                    </span>
-                    <span class="f-16 lh-25 c-light-text d-flex mt-3 helvetica-55">ეს ყველაზე გვარცელებული მითია.
-                        ადამიანები, რომლებიც ამ სფეროში არ არიან ხშირად
-                        ფიქრობენ, რომ UI და UX დიზაინი ერთი და იგივეა. რეალურად ეს, ასე არ არის. ეს ორი
-                    </span>
 
-                    <span class="f-30 lh-25 c-black d-flex mt-4 helvetica-75 lh-35">თუ გავიხსენებთ ჩვენთვის კარგად
-                        ნაცნობ
-                        წარმატებულ კომპანიებს ბევრ მათგანს
-                        ლოგოში სიმბოლოს ნაცვლად </span>
-                    <div class="img-block w-100 d-flex justify-content-center mt-5">
-                        <img class="col-12 col-md-10 p-0" src="./img/Image2.svg" alt="">
+    <seciton class="design__section overflow-hidden">
+        <div class="center">
+            <div class="row d-flex align-items-center py-5 mt-2 justify-content-md-between justify-content-center flex-column flex-lg-row-reverse">
+                <div class="left__side position-relative d-none d-md-flex col-md-8 col-lg-5">
+                    <div class="w-100 py-4 block">
+                        <img class="w-100" src="./img/Artboard-1.png" alt="">
                     </div>
-
-                    <span class="f-16 c-light-text d-flex mt-3 helvetica-55 lh-25">არ არის აუცილებელი, რომ ლოგო სიმბოლოს
-                        შეიცავდეს. თუ გავიხსენებთ ჩვენთვის
-                        კარგად ნაცნობ წარმატებულ კომპანიებს ბევრ მათგანს ლოგოში სიმბოლოს ნაცვლად
-                        ტიპოგრაფია აქვს გამოყენებული.</span>
-                    <span class="f-16 c-light-text d-flex mt-4 helvetica-55 lh-25">მიუხედავად ამისა, ეს არ ნიშნავს იმას,
-                        რომ ლოგო არ უნდა გამოიხატოს სიმბოლოთი.
-                        ზოგჯერ სიმბოლო შესაძლოა მეტად დასამახსოვრებელი იყოს, ვიდრე უბრალოდ წარწერა.
-                        გამოიყენეთ სიმბოლო თუ გსურთ გამოხატოთ თქვენი ბრენდის შესახებ რაიმე </span>
-                    <div
-                        class="tegs py-3 mt-5 d-flex align-items-center justify-content-between border-top border-bottom">
-                        <div class="left__side d-flex align-items-center flex-wrap">
-                            <span class="f-16 c-black d-flex  helvetica-75 lh-25">თეგები:</span>
-                            <span class="f-16 c-light-text d-flex  helvetica-55 lh-25">მარკეტინგი, დიზაინი, ციფრული
-                                ინდისტრია</span>
-                        </div>
-                        <div class="right-__side d-none d-md-flex align-items-center">
-                            <a href="" class="mr-2">
-                                <img src="./img/fb.svg" alt="">
-                            </a>
-                            <a href="">
-                                <img src="./img/twitter.svg" alt="">
-                            </a>
-                        </div>
-                    </div>
-
                 </div>
-
-
-                <div class="col-1 border-center d-none d-md-flex">
-
-                </div>
-
-
-
-
-                <div class="main__right col-4 col-lg-3  px-0 d-none d-md-block">
-                    <div class="align-items-center bc-yellow br-8 d-flex flex-column h-100 mb-5 
-                    justify-content-between pb-3 px-3 ">
-                        <img class="mt-4 w-100" src="./img/sale.png" alt="">
-                        <div class="text__block d-flex align-items-center flex-column mt-3">
-                            <h1 class="f-24 px-2 c-black helvetica-75 mb-4 text-center mt-4 text-break">
-                                მიიღე 20% ფასდაკლება
-                            </h1>
-                            <span class="f-14 text-center d-none d-md-flex c-black helvetica-55">არ გამოტოვო საუკეთესო
-                                შეთავაზებები! .</span>
-                            <button
-                                class="bc-white border-0 br-8 c-blue c-hover-white helvetica-75 hover-bc-blue mt-4 px-2 py-2 transition">გაიგე
-                                მეტი</button>
-
+                <div class="right__side col-12 col-lg-7 pl-0">
+                    <span class="mr-2 pl-2 helvetica-75 d-inline-block mb-5 f-24 c-black">როგორ ვქმნით საუკეთესო სასწავლო</span>
+                    <span class="mr-2 pl-2 helvetica-75 d-inline-block mb-4 f-24 c-black">აუდიტორიაზე ადაპტირებული </span>
+                    <span class="mr-2 pl-2 helvetica-55 d-inline-block mb-5 lh-24 f-16 c-light-text">კურსი მოიცავს იმ
+                        ძირითად საკითხებს, რომლის ცოდნაც აუცილებელია UI & UX დიზაინერად მუშაობისთვის. კურსის
+                        განმავლობაში სტუდენტები დაეუფლებიან Adobe Experience design-სა და SketchApp-ს, რის შემდეგაც
+                        ისინი დამოუკიდებლად შეძლებენ ციფრული პროდუქტების დიზაინის შექმნას.</span>
+                        <div class="block d-flex d-md-none py-3">
+                            <img class="w-100" src="./img/Artboard-1.png" alt="">
                         </div>
-                    </div>
-                    <div class="similar__blog mt-5">
-                        <h2 class="f-18 py-4 c-black helvetica-75">მსგავსი ბლოგი
-                        </h2>
-                        <img class="w-100" src="./img/vlog-car.svg" alt="">
-                        <span class="f-14 c-black d-flex mt-3 helvetica-55">ციფრული მარკეტინგის
-                            ბენეფიტები მცირე ბიზნესისთვის</span>
-                        <span class="f-14 c-light-text d-flex mt-2 helvetica-55">22 ივლისი, 2019</span>
+                    <span class="mr-2 pl-2 helvetica-75 d-inline-block mb-4 f-24 c-black">რეალური ქეისები, რეალური სამუშაო 
+                        შესაძლებლობები </span>
 
-                    </div>
+                    <span class="mr-2 pl-2 helvetica-55 d-inline-block mb-3 lh-24 f-16 c-light-text">კურსი მოიცავს იმ
+                        ძირითად საკითხებს, რომლის ცოდნაც აუცილებელია UI & UX დიზაინერად მუშაობისთვის. კურსის
+                        განმავლობაში სტუდენტები დაეუფლებიან Adobe Experience design-სა და SketchApp-ს, რის შემდეგაც
+                        ისინი დამოუკიდებლად შეძლებენ ციფრული პროდუქტების დიზაინის შექმნას.</span>
                 </div>
             </div>
         </div>
-    </section>
-
-
-    <section class="inner__block">
-        <div class="center">
-
+    </seciton>
+    <section class="count__section about__count bc-banner d-flex">
+        <div class="scroll-center position-relative">
+            <div class="d-flex justify-content-between py-5 flex-nowrap overflow-auto">
+                <div class="block scroll-block col-12 col-sm-6 col-md-3 mt-3 d-flex flex-column justify-content-center align-items-center">
+                    <span class="f-35 c-blue helvetica-75 d-block mb-3">1234</span>
+                    <span class="f-20 c-light-text helvetica-75">კურსდამთავრებული</span>
+                </div>
+                <div class="block scroll-block col-12 col-sm-6 col-md-3 mt-3 d-flex flex-column justify-content-center align-items-center">
+                    <span class="f-35 c-blue helvetica-75 d-block mb-3">45</span>
+                    <span class="f-20 c-light-text helvetica-75">დასრულებული კურსი</span>
+                </div>
+                <div class="block scroll-block col-12 col-sm-6 col-md-3 mt-3 d-flex flex-column justify-content-center align-items-center">
+                    <span class="f-35 c-blue helvetica-75 d-block mb-3">240</span>
+                    <span class="f-20 c-light-text helvetica-75">დასაქმებული</span>
+                </div>
+                <div class="block scroll-block col-12 col-sm-6 col-md-3 mt-3 d-flex flex-column justify-content-center align-items-center">
+                    <span class="f-35 c-blue helvetica-75 d-block mb-3">84</span>
+                    <span class="f-20 c-light-text helvetica-75">მასტერკლასი</span>
+                </div>
+            </div>
+            <span class="bc-banner scroll__overlay"></span>
         </div>
     </section>
+    <section class="py-5 overflow-hidden">
+        <div class="center">
+            <div class="row">
 
+                <div class="d-flex align-items-center justify-content-between row flex-column flex-md-row">
+                    <div class="left__side col-12 p-0 col-md-6 pointer">
+                        <div>
+                            <img class="w-100 " src="./img/Group 1178.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="right__side col-12 col-md-5 d-md-flex flex-column">
+                        <span class="f-24 helvetica-75 c-black d-block mb-4">რატომ უნდა შემოგვიერთდე?</span>
+                        <span class="f-16 c-light-text helvetica-55">დღეს ნებისმიერი ბიზნესისა თუ ინდივიდისთვის 
+                            წარმატების მისაღწევად აუცილებელია ციფრულ 
+                            ტექნოლოგიაზე ოპტიმიზირებულ სტრატეგიასა თუ 
+                            სტრუქტურასთან ადაპტირება.</span>
+                        <span class="f-16 c-light-text helvetica-55 d-flex mt-4">ციფრულ ეკოსისტემაზე მორგებულ, კომფორტულ 
+                            გარემოში შეხვდები ადამიანებს, რომლებიც საკუთარ 
+                            ხედვებსა და უნიკალურ მიდგომებს გაგიზიარებენ, რაც 
+                            სასურველი კარიერული ეტაპების მიღწევაში 
+                            დაგეხმარება.</span>
 
+                    </div>
+                </div>
 
-
-
+            </div>
+        </div>
+    </section>
+    <section class="join__us bc-banner py-5">
+        <div class="center d-flex flex-column align-items-center">
+            <span class="f-24 helvetica-75 c-black d-block mb-3 pt-3">შეოგვიერთდი</span>
+            <span class="f-16 helvetica-55 c-light-text text-center lh-24 d-block col-12 col-md-5">გაიარე ჩვენთან არსებუი კურსები და გახდი ციფრული 
+                ინდუსტრიის აკადეიის კურსდათავრებული</span>
+                <button class="blue-button f-14 my-3">კურსები</button>
+        </div>
+    </section>
 
 
 
@@ -360,7 +355,7 @@
                 </li>
             </ul>
         </div>
-        <div id="accordion" class="mx-auto d-flex flex-column d-md-none up__side" style="max-width: 80%;">
+        <div id="accordion" class="mx-auto d-flex flex-column d-md-none up__side">
             <li class="list d-flex align-items-center mt-4 ml-3 pl-3">
                 <a href="">
                     <img class="" src="./img/be.svg" alt="">
