--- a/test-scss/competition_1.html
+++ b/test-scss/competition_1.html
@@ -168,11 +168,11 @@
     </div>
 
     <section class="blog__design pb-5">
-        <div class="center d-flex mt-3">
-            <div class="left__side pl-0 pr-3 col-4 d-none d-md-flex">
+        <div class="center d-flex mt-3 justify-content-between">
+            <div class="left__side px-0 col-3 d-none d-md-flex">
                 <img class="w-100" src="./img/vlog.svg" alt="">
             </div>
-            <div class="right__side col-12 col-md-8">
+            <div class="col-12 col-md-8 px-0 right__side">
                 <div class="up__side d-flex justify-content-between align-items-center flex-wrap">
                     <h1 class="f-20 c-black mt-2 helvetica-75">WEB დეველოპმენტი</h1>
                     <div class="f-14 c-light-text mt-2 helvetica-55">დარჩენილია
