--- a/test-scss/index.html
+++ b/test-scss/index.html
@@ -839,7 +839,7 @@
                 </li>
             </ul>
         </div>
-        <div id="accordion" class="mx-auto d-flex flex-column d-md-none up__side" style="max-width: 80%;">
+        <div id="accordion" class="mx-auto d-flex flex-column d-md-none up__side">
             <li class="list d-flex align-items-center mt-4 ml-3 pl-3">
                 <a href="">
                     <img class="" src="./img/be.svg" alt="">
