--- a/test-scss/mediakit.html
+++ b/test-scss/mediakit.html
@@ -141,122 +141,153 @@
             </div>
         </div>
     </header>
-    <div class="center mt-3 d-flex d-md-none">
-        <a class="btn btn-light" href="vlog.html">
-            <img src="./img/back.svg" alt="">
-            back</a>
-    </div>
-    <section class="vlog_iiner">
+    <section class="mini__header border-bottom d-none d-md-flex">
         <div class="center">
-            <h1 class="f-30 mt-4 c-black helvetica-75 col-12 col-md-9 col-lg-6 p-0 lh-35">4 გავრცელებული მითი UX
-                დიზაინის
-                შესახებ
-            </h1>
-            <span class="f-14 c-light-text d-flex mt-4 helvetica-55">22 ივლისი, 2019</span>
+            <nav style="height: 60px;" class="nav-header">
+                <ul class="d-flex align-items-center">
+                    <li class="list mr-4 d-flex align-items-center">
+                        <a style="height: 60px;" href=""
+                            class="nav__a c-light-text c-hover-blue transition helvetica-75">პაკეტები</a>
+                    </li>
+                    <li class="list mr-4 d-flex align-items-center">
+                        <a style="height: 60px;" href=""
+                            class="nav__a c-light-text c-hover-blue transition helvetica-75">ფასდაკლებები</a>
+                    </li>
+                    <li class="list mr-4 d-flex align-items-center">
+                        <a style="height: 60px;" href=""
+                            class="nav__a c-light-text c-hover-blue transition helvetica-75">კონკუსრები</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </section>
 
-            <div class="d-flex align-items-start justify-content-between mt-3">
-                <div class="main__left col-12 col-md-7 col-lg-8  px-0">
-                    <img class="w-100" src="./img/car.svg" alt="">
-                    <span class="f-16 lh-25 c-light-text d-flex mt-3 helvetica-55">მითია თუ რეალობა? ხშირად გაგჩენიათ ეს
-                        შეკითხვა?-ალბათ, კი. ადამიანები საკუთარი
-                        ინტერპრეტაციით აფასებენ კონკრეტულ ფაქტებს, შემდეგ კი ახდენენ მათ </span>
-                    <span class="f-16 lh-25 c-light-text d-flex mt-3 helvetica-55">გაეცანით, 4 გავრცელებულ მითს UX
-                        დიზაინის შესახებ:</span>
-                    <span class="f-24 lh-25 c-black d-flex mt-3 helvetica-75">მითი #1: UX = UI</span>
-                    <span class="f-16 lh-25 c-light-text d-flex mt-3 helvetica-55">ეს ყველაზე გვარცელებული მითია.
-                        ადამიანები, რომლებიც ამ სფეროში არ არიან ხშირად
-                        ფიქრობენ, რომ UI და UX დიზაინი ერთი და იგივეა. რეალურად ეს, ასე არ არის. ეს ორი
-                    </span>
-                    <span class="f-16 lh-25 c-light-text d-flex mt-3 helvetica-55">ეს ყველაზე გვარცელებული მითია.
-                        ადამიანები, რომლებიც ამ სფეროში არ არიან ხშირად
-                        ფიქრობენ, რომ UI და UX დიზაინი ერთი და იგივეა. რეალურად ეს, ასე არ არის. ეს ორი
-                    </span>
 
-                    <span class="f-30 lh-25 c-black d-flex mt-4 helvetica-75 lh-35">თუ გავიხსენებთ ჩვენთვის კარგად
-                        ნაცნობ
-                        წარმატებულ კომპანიებს ბევრ მათგანს
-                        ლოგოში სიმბოლოს ნაცვლად </span>
-                    <div class="img-block w-100 d-flex justify-content-center mt-5">
-                        <img class="col-12 col-md-10 p-0" src="./img/Image2.svg" alt="">
+    <div class="overflow-hidden bc-banner">
+        <div class="center">
+            <div
+                class="row d-flex align-items-center py-5 mt-2 justify-content-md-between justify-content-center flex-column flex-lg-row-reverse">
+                <div class="left__side position-relative d  -flex col-md-8 col-lg-5">
+                    <div class="w-100 py-4 block">
+                        <img class="w-100" src="./img/media.svg" alt="">
                     </div>
+                </div>
+                <div class="right__side col-12 col-lg-7 pl-0 mt-5 mt-md-0">
+                    <span class="helvetica-75 d-inline-block mb-3 f-40 c-black">Downloads & Media Kit</span>
+                    <span class="helvetica-55 d-inline-block lh-24 f-16 c-blue">Grab our official Digitaledu brand
+                        resources and learn about usage guidelines.</span>
+                    <!-- <div class="block d-flex d-md-none py-3">
+                            <img class="w-100" src="./img/Artboard-1.png" alt="">
+                        </div> -->
+                </div>
+            </div>
+        </div>
+    </div>
 
-                    <span class="f-16 c-light-text d-flex mt-3 helvetica-55 lh-25">არ არის აუცილებელი, რომ ლოგო სიმბოლოს
-                        შეიცავდეს. თუ გავიხსენებთ ჩვენთვის
-                        კარგად ნაცნობ წარმატებულ კომპანიებს ბევრ მათგანს ლოგოში სიმბოლოს ნაცვლად
-                        ტიპოგრაფია აქვს გამოყენებული.</span>
-                    <span class="f-16 c-light-text d-flex mt-4 helvetica-55 lh-25">მიუხედავად ამისა, ეს არ ნიშნავს იმას,
-                        რომ ლოგო არ უნდა გამოიხატოს სიმბოლოთი.
-                        ზოგჯერ სიმბოლო შესაძლოა მეტად დასამახსოვრებელი იყოს, ვიდრე უბრალოდ წარწერა.
-                        გამოიყენეთ სიმბოლო თუ გსურთ გამოხატოთ თქვენი ბრენდის შესახებ რაიმე </span>
-                    <div
-                        class="tegs py-3 mt-5 d-flex align-items-center justify-content-between border-top border-bottom">
-                        <div class="left__side d-flex align-items-center flex-wrap">
-                            <span class="f-16 c-black d-flex  helvetica-75 lh-25">თეგები:</span>
-                            <span class="f-16 c-light-text d-flex  helvetica-55 lh-25">მარკეტინგი, დიზაინი, ციფრული
-                                ინდისტრია</span>
-                        </div>
-                        <div class="right-__side d-none d-md-flex align-items-center">
-                            <a href="" class="mr-2">
-                                <img src="./img/fb.svg" alt="">
-                            </a>
-                            <a href="">
-                                <img src="./img/twitter.svg" alt="">
-                            </a>
+
+    <section class="join__us py-5">
+        <div class="center d-flex flex-column mb-4">
+            <span class="helvetica-75 d-inline-block mb-2 f-30 c-black">Downloads</span>
+            <span class="helvetica-55 d-inline-block f-16 c-light-text">We’ve provided vector versions of our logo and
+                mark for certain uses listed below.</span>
+        </div>
+        <div class="center">
+            <div class="br-8 box-shadow d-flex justify-content-center d-flex align-items-center flex-column pt-5 pb-2">
+
+                <div
+                    class="d-flex align-items-center flex-column flex-md-row justify-content-between col-md-8 col-lg-6 pt-5 pb-md-0 pt-md-3">
+                    <div class="left__side d-flex flex-column align-items-center">
+                        <img class="mb-4" src="./img/download_1.svg" alt="">
+                        <span class="f-12 c-black helvetica-75">Academy logo</span>
+                        <div class="formats d-flex align-items-center mt-3">
+                            <span class="f-12 c-light-text helvetica-55 border br-3 lh-20 px-2 mx-1">SVG</span>
+                            <span class="f-12 c-light-text helvetica-55 border br-3 lh-20 px-2 mx-1">EPS</span>
+                            <span class="f-12 c-light-text helvetica-55 border br-3 lh-20 px-2 mx-1">PDF</span>
+                            <span class="f-12 c-light-text helvetica-55 border br-3 lh-20 px-2 mx-1">PNG</span>
+
                         </div>
                     </div>
+                    <div class="right__side d-flex flex-column align-items-center mt-5 mt-md-0">
+                        <img class="mb-4" src="./img/donwload.svg" alt="">
+                        <span class="f-12 c-black helvetica-75">Academy logo</span>
+                        <div class="formats d-flex align-items-center mt-3">
+                            <span class="f-12 c-light-text helvetica-55 border br-3 lh-20 px-2 mx-1">SVG</span>
+                            <span class="f-12 c-light-text helvetica-55 border br-3 lh-20 px-2 mx-1">EPS</span>
+                            <span class="f-12 c-light-text helvetica-55 border br-3 lh-20 px-2 mx-1">PDF</span>
+                            <span class="f-12 c-light-text helvetica-55 border br-3 lh-20 px-2 mx-1">PNG</span>
+
+                        </div>
+                    </div>
+                </div>
+                <button class="blue-button f-14 my-4 mx-auto">კურსები</button>
+            </div>
+        </div>
+    </section>
+    <div class="d-flex w-100 justify-content-center pb-5 pt-1 my-3">
+        <div class="col-4 border-bottom"></div>
+    </div>
+
+
+    <section class="colors pb-5">
+        <div class="center d-flex justify-content-between flex-column flex-md-row">
+            <div class="left__side position-relative d-flex flex-column col-12 col-md-6 p-0">
+                <span class="helvetica-75 d-inline-block mb-2 f-30 c-black">ფერები</span>
+                <span class="helvetica-55 d-inline-block f-16 c-light-text">ციფრული აკადეიმიის ლოგოს ფერები და მისი
+                    გამოყენების წესები</span>
+                <div class="color-block mt-4">  
+                    <div class="f-16 bc-blue helvetica-55 c-white py-md-5 px-2 py-4 text-center lh-10 br-8">
+                        #6595FF
+                    </div>
+                    <span class="f-14 c-light-text helvetica-55 d-block pt-4 text-center">ლურჯი</span>
+                </div>
+                <div class="d-flex align-items-center flex-nowrap mt-4 overflow-auto">
+                    <div class="color-block mr-3 w-100">
+                        <div class="f-16 bc-purple helvetica-55 c-white py-md-5 px-2 py-4 text-center lh-10 br-8">
+                            #9F33FF
+                        </div>
+                        <span class="f-14 c-light-text helvetica-55 d-block pt-4 text-center">იასანისფერი</span>
+                    </div>
+                    <div class="color-block mr-3 w-100">
+                        <div class="f-16 bc-light-blue helvetica-55 c-white py-md-5 px-2 py-4 text-center lh-10 br-8">
+                            #22AAFF
+                        </div>
+                        <span class="f-14 c-light-text helvetica-55 d-block pt-4 text-center">ცისფერი</span>
+                    </div>
+                    <div class="color-block mr-3 w-100">
+                        <div class="f-16 bc-yellow helvetica-55 c-white py-md-5 px-2 py-4 text-center lh-10 br-8">
+                            #FFCD00
+                        </div>
+                        <span class="f-14 c-light-text helvetica-55 d-block pt-4 text-center">ყვითელი</span>
+                    </div>
+                    <div class="color-block mr-3 w-100">
+                        <div class="f-16 bc-red helvetica-55 c-white py-md-5 px-2 py-4 text-center lh-10 br-8">
+                            #FF5D31
+                        </div>
+                        <span class="f-14 c-light-text helvetica-55 d-block pt-4 text-center">წითელი</span>
+                    </div>
+                </div>
+                <span class="scroll__overlay bc-white"></span>
+            </div>
+            <div class="right__side d-flex flex-column col-12 col-md-5">
+                <div class="block mt-4">
+                    <div class="bc-black br-8 d-flex align-items-center justify-content-center py-5">
+                        <img class="my-4" src="./img/white-download_1.svg" alt="">
+                    </div>
+                    <span class="f-14 c-light-text helvetica-55 d-block pt-2 text-center">მუქ ფონზე გამოიყენეთ თეთრი ფერის ლოგო</span>
 
                 </div>
 
 
-                <div class="col-1 border-center d-none d-md-flex">
-
-                </div>
-
-
-
-
-                <div class="main__right col-4 col-lg-3  px-0 d-none d-md-block">
-                    <div class="align-items-center bc-yellow br-8 d-flex flex-column h-100 mb-5 
-                    justify-content-between pb-3 px-3 ">
-                        <img class="mt-4 w-100" src="./img/sale.png" alt="">
-                        <div class="text__block d-flex align-items-center flex-column mt-3">
-                            <h1 class="f-24 px-2 c-black helvetica-75 mb-4 text-center mt-4 text-break">
-                                მიიღე 20% ფასდაკლება
-                            </h1>
-                            <span class="f-14 text-center d-none d-md-flex c-black helvetica-55">არ გამოტოვო საუკეთესო
-                                შეთავაზებები! .</span>
-                            <button
-                                class="bc-white border-0 br-8 c-blue c-hover-white helvetica-75 hover-bc-blue mt-4 px-2 py-2 transition">გაიგე
-                                მეტი</button>
-
-                        </div>
+                <div class="block mt-4">
+                    <div class="bc-banner br-8 d-flex align-items-center justify-content-center py-5">
+                        <img class="my-4" src="./img/download_1.svg" alt="">
                     </div>
-                    <div class="similar__blog mt-5">
-                        <h2 class="f-18 py-4 c-black helvetica-75">მსგავსი ბლოგი
-                        </h2>
-                        <img class="w-100" src="./img/vlog-car.svg" alt="">
-                        <span class="f-14 c-black d-flex mt-3 helvetica-55">ციფრული მარკეტინგის
-                            ბენეფიტები მცირე ბიზნესისთვის</span>
-                        <span class="f-14 c-light-text d-flex mt-2 helvetica-55">22 ივლისი, 2019</span>
+                    <span class="f-14 c-light-text helvetica-55 d-block pt-2 text-center">ღია ფონზე გამოიყენეთ ლურჯი (#5086FF) ფერი</span>
 
-                    </div>
                 </div>
             </div>
         </div>
     </section>
-
-
-    <section class="inner__block">
-        <div class="center">
-
-        </div>
-    </section>
-
-
-
-
-
-
 
 
 
@@ -360,7 +391,7 @@
                 </li>
             </ul>
         </div>
-        <div id="accordion" class="mx-auto d-flex flex-column d-md-none up__side" style="max-width: 80%;">
+        <div id="accordion" class="mx-auto d-flex flex-column d-md-none up__side">
             <li class="list d-flex align-items-center mt-4 ml-3 pl-3">
                 <a href="">
                     <img class="" src="./img/be.svg" alt="">
